--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Gov 50 Final Project"
-author: "Your Name Here"
-description: "My final project"
+author: "Sarp Nalbantoglu"
+description: "A Statistical Analysis of the Effects of the COVID-19 Pandemic on Politcal Leaning at the County, State, and National Levels (2020-2022) "
 output:
   distill::distill_article:
     self_contained: false
@@ -11,4 +11,4 @@ output:
 
 ## Project thoughts
 
-I am interested in exploring data related to...
+I am interested in exploring data related to COVID-19 and its effects on local and national elections in the US. I want to determine to what extent COVID-19 influenced political change in the US by comparing high- and low- impact counties, cities, and states. 
